--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/LaMejor
 spring.datasource.username=postgres
 spring.datasource.password=6488
-server.port = 8080
+server.port = $PORT
 spring.datasource.driver-class-name= org.postgresql.Driver
 
 spring.data.rest.basePath=/RecolectaAPI
